# pick_and_place_WSL2_win11

./: .gitignore  Dockerfile  LICENSE  README.md  dependencies.repos  docker-compose.yaml  script1.py  script2.py  std.py
cam_flange_support/: CMakeLists.txt  README.md  package.xml
cam_flange_support/launch/: visualizer.launch.py
cam_flange_support/meshes/collision/: CamFlangeSupport.stl  RingFlange.stl
cam_flange_support/meshes/visual/: CamFlangeSupport.dae  RingFlange.dae
cam_flange_support/rviz/: config.rviz
cam_flange_support/srdf/: cam_flange_support_collisions_macro.srdf.xacro
cam_flange_support/urdf/: cam_flange_support_macro.urdf.xacro  debug.urdf.xacro  gazebo_material_macro.urdf.xacro
camera_positioning/: CMakeLists.txt  LICENSE  README.md  package.xml
camera_positioning/launch/: camera_positioning.launch.py
camera_positioning/src/: diamond_detector_node.cpp  diamond_generator.cpp
pick_and_place/: CMakeLists.txt  package.xml
pick_and_place/config/: configuration.yaml  obstacles.yaml
pick_and_place/launch/: pick_and_place.launch.py  publish_obstacles.launch.py
pick_and_place/src/: obstacle_publisher_node.cpp  pick_and_place_node.cpp
pick_and_place_gui/: package.xml  setup.cfg  setup.py
pick_and_place_gui/pick_and_place_gui/: pick_and_place_gui.py
setup_description/: CMakeLists.txt  package.xml
setup_description/config/: ur_controllers.yaml  ur_controllers_gazebo.yaml
setup_description/gazebo/: ur_robotiq.ignition_macro.xacro
setup_launch/: package.xml  setup.cfg  setup.py
setup_moveit_config/: CMakeLists.txt  package.xml
vision_pipeline/: package.xml  setup.py
(+28 files in other folders)
